--- a/groupBy_coauthors.ipynb
+++ b/groupBy_coauthors.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# group articles by authors"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,9 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +66,7 @@
        "Experimental procedure and sim... (2018) Mechanics of Materials"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,87 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'Archie2017302',\n",
-       "  'Baron2016185',\n",
-       "  'Deng2015124',\n",
-       "  'Diehl2016429',\n",
-       "  'Diehl2017311',\n",
-       "  'Diehl2017848',\n",
-       "  'Diehl2017872',\n",
-       "  'Grilli2018104',\n",
-       "  'Lai2015290',\n",
-       "  'Lai2016173',\n",
-       "  'Lai201867',\n",
-       "  'Li2017323',\n",
-       "  'Ponge201740',\n",
-       "  'Raabe20151127',\n",
-       "  'Schemmann2015386',\n",
-       "  'Tan2016200',\n",
-       "  'Tarzimoghadam2015291',\n",
-       "  'Tasan2015391',\n",
-       "  'Welsch2016188',\n",
-       "  'Yan2015399',\n",
-       "  'Yao2017258',\n",
-       "  'Zhang2016111'},\n",
-       " {'AlabdAlhafez2016187',\n",
-       "  'AlabdAlhafez2017',\n",
-       "  'AlabdAlhafez2018',\n",
-       "  'Alhafez2015',\n",
-       "  'Alhafez2016',\n",
-       "  'Alhafez201740',\n",
-       "  'Gao201577',\n",
-       "  'Gao2016688',\n",
-       "  'Gunkelmann2017181',\n",
-       "  'Kositski2015370',\n",
-       "  'Kositski2018125',\n",
-       "  'Ruestes2017',\n",
-       "  'Steinberger20162065'},\n",
-       " {'Monavari2016575', 'Sandfeld2015', 'Wu201642', 'Wu2017142', 'Wu2017389'},\n",
-       " {'Fu2015643', 'Fu201577831', 'Huang2017', 'Huang2017215', 'Huang2017609'},\n",
-       " {'Wang2017', 'Wang2017143', 'Wang2018', 'Zhan2018392'},\n",
-       " {'Voyiadjis2016315', 'Voyiadjis2017', 'Yaghoobi201664', 'Yaghoobi201710'},\n",
-       " {'Feng2017193', 'Liu2017236', 'Xie201710', 'Xu2017174'},\n",
-       " {'Weaver2016463', 'Weaver2017368', 'Weaver20185296'},\n",
-       " {'Leitner2017', 'Leitner201869'},\n",
-       " {'Zhang2018109', 'Zhang2018799'},\n",
-       " {'Li2017', 'Li201796'},\n",
-       " {'Wu2016337', 'Yang2016213'},\n",
-       " {'Briffod20161741', 'Briffod201872'},\n",
-       " {'Kasvayee201627', 'Kasvayee2017265'},\n",
-       " {'Fernandez-Zelaia2017535', 'Fernandez-Zelaia201892'},\n",
-       " {'Ast20163786', 'Ast2017198'},\n",
-       " {'Aghababaei2016', 'Aghababaei2018'},\n",
-       " {'Hémery2017285', 'Hémery2018277'},\n",
-       " {'Gagel2016399', 'Weygand2015369'}]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "groupByAuthors"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 197,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = groupByAuthors[0].pop()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
