--- a/authors.ipynb
+++ b/authors.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,9 +38,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -48,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -68,25 +77,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Huang, Y.', 'Hwang, K.C.', 'Wilkinson, A.J.', 'Fressengeas, C.', 'Taupin, V.', 'Raabe, D.', 'Britton, T.B.', 'Le, K.C.', 'Field, D.P.', 'Adams, B.L.']\n"
+      "['Huang, Y.', 'Hwang, K.C.', 'Wilkinson, A.J.', 'Fressengeas, C.', 'Taupin, V.', 'Britton, T.B.', 'Raabe, D.', 'Le, K.C.', 'Adams, B.L.', 'Field, D.P.']\n"
      ]
     }
    ],
    "source": [
-    "topAuthors = sorted( biblio.authors.items(), key=lambda x:len(x[1]), reverse=True)[:10]\n",
-    "print( [ a for a, b in topAuthors] )"
+    "topAuthors = sorted( biblio.authors.items(), key=lambda x:len(x[1]), reverse=True)\n",
+    "print( [ a for a, b in topAuthors][:10] )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -95,46 +104,36 @@
        "['Huang, Y.',\n",
        " 'Wilkinson, A.J.',\n",
        " 'Fressengeas, C.',\n",
-       " 'Raabe, D.',\n",
        " 'Le, K.C.',\n",
-       " 'Field, D.P.',\n",
+       " 'Raabe, D.',\n",
        " 'Adams, B.L.',\n",
+       " 'Field, D.P.',\n",
        " 'Ortiz, M.',\n",
-       " 'Gurtin, M.E.',\n",
        " 'Acharya, A.',\n",
-       " 'Xiang, Y.',\n",
-       " 'Nazari, A.',\n",
+       " 'Gurtin, M.E.',\n",
        " 'Forest, S.',\n",
+       " 'Nazari, A.',\n",
+       " 'Xiang, Y.',\n",
        " 'Geers, M.G.D.',\n",
        " 'Dunne, F.P.E.',\n",
-       " 'McDowell, D.L.',\n",
+       " 'Bammann, D.J.',\n",
+       " 'Svendsen, B.',\n",
+       " 'Needleman, A.',\n",
        " 'Tamura, N.',\n",
        " 'Sandfeld, S.',\n",
-       " 'Needleman, A.',\n",
        " 'Bardella, L.',\n",
-       " 'Svendsen, B.',\n",
+       " 'Zbib, H.M.',\n",
        " 'Voyiadjis, G.Z.',\n",
        " 'Kysar, J.W.',\n",
-       " 'Zbib, H.M.',\n",
-       " 'Neff, P.',\n",
-       " 'Berbenni, S.',\n",
        " 'Miehe, C.',\n",
        " 'Liu, W.',\n",
-       " 'Fleck, N.A.',\n",
-       " 'Pantleon, W.',\n",
-       " 'Fullwood, D.T.',\n",
-       " 'Bammann, D.J.',\n",
-       " 'Böhlke, T.',\n",
-       " 'Ghosh, S.',\n",
-       " 'Swaddiwudhipong, S.',\n",
-       " 'Lazar, M.',\n",
-       " 'Engel, U.',\n",
-       " 'Hartley, C.S.',\n",
-       " 'Kupferman, R.',\n",
-       " 'Abu Al-Rub, R.K.']"
+       " 'Neff, P.',\n",
+       " 'Berbenni, S.',\n",
+       " 'McDowell, D.L.',\n",
+       " 'Fleck, N.A.']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +142,7 @@
     "alreadyPicked = set()\n",
     "topAuthors = []\n",
     "\n",
-    "for k in range(40):\n",
+    "for k in range(30):\n",
     "\n",
     "    remaing = [ (auth, set(arts)-alreadyPicked ) for auth, arts in biblio.authors.items()]\n",
     "    \n",
@@ -161,28 +160,80 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1997-2010 (45) Huang, Y.\n",
+      "2006-2018 (28) Wilkinson, A.J.\n",
+      "2006-2017 (26) Fressengeas, C.\n",
+      "2008-2018 (17) Le, K.C.\n",
+      "1996-2018 (18) Raabe, D.\n",
+      "1997-2015 (15) Adams, B.L.\n",
+      "1995-2018 (15) Field, D.P.\n",
+      "1999-2015 (14) Ortiz, M.\n",
+      "2000-2014 (14) Acharya, A.\n",
+      "1994-2011 (13) Gurtin, M.E.\n",
+      "1998-2018 (12) Forest, S.\n",
+      "2011-2012 (12) Nazari, A.\n",
+      "2006-2018 (12) Xiang, Y.\n",
+      "2002-2015 (11) Geers, M.G.D.\n",
+      "2007-2018 (12) Dunne, F.P.E.\n",
+      "1982-2011 (10) Bammann, D.J.\n",
+      "2000-2016 ( 9) Svendsen, B.\n",
+      "1999-2016 (11) Needleman, A.\n",
+      "2003-2015 ( 9) Tamura, N.\n",
+      "2010-2018 ( 9) Sandfeld, S.\n",
+      "2006-2016 ( 9) Bardella, L.\n",
+      "1999-2017 ( 9) Zbib, H.M.\n",
+      "2007-2016 ( 9) Voyiadjis, G.Z.\n",
+      "2007-2018 ( 9) Kysar, J.W.\n",
+      "2011-2017 ( 7) Miehe, C.\n",
+      "2005-2018 ( 7) Liu, W.\n",
+      "2008-2017 ( 8) Neff, P.\n",
+      "2008-2017 (12) Berbenni, S.\n",
+      "1998-2014 (10) McDowell, D.L.\n",
+      "1993-2015 ( 6) Fleck, N.A.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k in range(30):\n",
+    "    \n",
+    "    auth = topAuthors[k]\n",
+    "    yearMin, yearMax = 5000, 0\n",
+    "\n",
+    "    for key in biblio.authors[auth]:\n",
+    "        article = biblio.getArticleFromKey(key)\n",
+    "        yearMin, yearMax = min(yearMin, article.year), max(yearMax, article.year)\n",
+    "\n",
+    "    print( '{}-{} ({:2}) {}'.format(yearMin, yearMax, len(biblio.authors[auth]), auth) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "['Dunlap2018125',\n",
-       " 'Hansen2017460',\n",
-       " 'Chelladurai2017907',\n",
-       " 'Ruggles20161',\n",
-       " 'Ruggles2016231',\n",
-       " 'Khosravani2015202',\n",
-       " 'Hardin201573',\n",
-       " 'Takahashi20144710',\n",
-       " 'Hardin2013146',\n",
-       " 'Ruggles20138',\n",
-       " 'Gardner20101234']"
+       "(1997, 2010)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "biblio.authors[ topAuthors[30] ]"
+    "all?"
    ]
   },
   {
