--- a/crossRef/exploreTheReferenceGraph.ipynb
+++ b/crossRef/exploreTheReferenceGraph.ipynb
@@ -47,18 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 483,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Trimetallic PEPPSI-Type Palladium N-Heterocyclic Carbene Complexes - Improved Catalyst Lifetime in the Mizoroki-Heck Coupling Reaction']\n",
-      "[10.1002/ejic.201500542] Trimetallic PEPPSI-Type Palladium N-Heterocyclic Carbene Complexes - Improved \n",
-      " Catalyst Lifetime in the Mizoroki-Heck Coupling Reaction\n",
-      "Francisco Martínez-Olid; Román Andrés; Juan C. Flores; Pilar Gómez-Sal - European Journal of Inorganic Chemistry - 2015\n",
-      "nbr de refs:  145 - with doi: 105\n"
+      "['Chemistry of acetylenic ethers. XIX. The reaction of aldehydes with ethoxyethynylmagnesium bromide']\n",
+      "[10.1002/recl.19560751205] Chemistry of acetylenic ethers. XIX. The reaction of \n",
+      " aldehydes with ethoxyethynylmagnesium bromide\n",
+      "J. C. W. Postma; J. F. Arens - Recueil des Travaux Chimiques des Pays-Bas - 2010\n",
+      "nbr de refs:  8 - with doi: 4\n"
      ]
     }
    ],
