--- a/graph_DFS.ipynb
+++ b/graph_DFS.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "{'a': None, 'b': 'a', 'c': 'a', 'd': 'a', 'e': 'd', 'f': 'c', 'g': 'c'}"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
     "            dfs_visit(v, adj, result, parent=u)\n",
     "        elif v not in result.end_time:\n",
     "            result.edge_type[(u, v)] = 'back'\n",
-    "        elif result.start_time[u] < result.end_time[v]:\n",
+    "        elif result.start_time[u] > result.end_time[v]:\n",
     "            result.edge_type[(u, v)] = 'forward'\n",
     "        else:\n",
     "            result.edge_type[(u, v)] = 'cross'\n",
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -275,14 +275,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{('b', 'f'): 'cross', ('b', 'c'): 'cross', ('a', 'd'): 'tree', ('a', 'c'): 'tree', ('c', 'g'): 'tree', ('d', 'e'): 'tree', ('c', 'f'): 'tree', ('e', 'a'): 'back', ('a', 'b'): 'tree'}\n",
+      "{('b', 'f'): 'forward', ('b', 'c'): 'forward', ('a', 'd'): 'tree', ('a', 'c'): 'tree', ('c', 'g'): 'tree', ('d', 'e'): 'tree', ('c', 'f'): 'tree', ('e', 'a'): 'back', ('a', 'b'): 'tree'}\n",
       "['a', 'd', 'e', 'b', 'c', 'g', 'f']\n"
      ]
     }
