--- a/graph_DFS.ipynb
+++ b/graph_DFS.ipynb
@@ -567,6 +567,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://stackoverflow.com/questions/3420685/how-to-assign-levels-to-vertices-of-an-acyclic-directed-graph"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
